--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "express": "3.1.0"
     },
     "engines": {
-        "node": "0.8.x",
+        "node": "4",
         "npm": "1.2.x"
     }
 }
